# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: unit_testing.yaml
src/calculator/: __init__.py  calculator.py
tests/: test_calculator.py
