[tool.poetry]
name = "calculator"
version = "0.1.1"
description = ""
authors = ["Óscar Criado de la Torre <ocriado91@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
